<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	 <item
        android:id="@+id/action_search"
        android:orderInCategory="98"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>
	 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_title"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_title"/>

</menu>
